@@ -1,4 +1,9 @@
-2020-01-08 Wiley E. Hill <wileyhill@gmail.com>
+2020-01-09 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/widgets/geda_menu_button.c: Convert plain source documentation to Doxygen
+      documentation for properties:
+
+          * "default-outside-border"
 
     * src/widgets/geda_menu_item.c: Reorganizing geda_menu_item_class_init;
       replocate properties before signals. Update existing property documentation
